@@ -7,6 +7,7 @@
  361121 pan icon love (Michael Monreal)
  361445 Headers pane always has a scrollbar (Michael Monreal)
  361885 Cannot background compose window (Ken Bloom)
+ 354831 Pan silently removes characters when sending articles (Artur Jachacy)
 
 0.116 "Blanton's"
  360375 non-ascii subject is mangled
